# fast_zero

./: .dockerignore  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml  pipeline.yaml~
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py  users.py~
migrations/: env.py
migrations/versions/: 159337a47ebe_create_todos_table.py  1817fe736699_create_users_table.py  3453585b3f92_add_created_at_and_updated_at_fields_in_.py  8acff12fad06_added_updated_at_column_to_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth.py~  test_db.py  test_security.py  test_todos.py  test_users.py
